--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ include tox.ini
 exclude .bumpversion.cfg
 exclude .editorconfig
 exclude pep257.sh
+exclude codecov.yml
 
 recursive-include docs *.rst .gitkeep conf.py Makefile make.bat
 recursive-include requirements *.pip
