--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ passenv =
     DEFAULT_DATABASE_URL
     SPHINXOPTS_BUILD
     SPHINXOPTS_LINKCHECK
+setenv =
+    ENV = test
 whitelist_externals = make
 
 [testenv:flake8]
