--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-qunit-istanbul": "^0.6.0",
     "istanbul": "^0.4.4",
@@ -32,7 +34,9 @@
   },
   "homepage": "https://github.com/DebVortex/ariane#readme",
   "dependencies": {
-    "foundation": "^4.2.1-1",
-    "knockout": "^3.4.0"
+    "foundation-sites": "^6.2.3",
+    "knockout": "^3.4.0",
+    "modernizr": "^3.3.1",
+    "zepto": "^1.0.1"
   }
 }
