--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34,flake8,isort,manifest,docs,pep257
+envlist = py34,flake8,isort,manifest,docs,pep257
 minversion = 2.1.0
 
 [testenv]
