--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ skip = manage.py,migrations,wsgi.py
 [pep257]
 add-ignore = D100,D104
 
-[pytest]
+[tool:pytest]
 DJANGO_SETTINGS_MODULE = ariane.config.settings.test
 DJANGO_CONFIGURATION = Testing
 addopts =
